@@ -1,3 +1,8 @@
+2012-12-23  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/54884
+	* gfortran.dg/public_private_module_8.f90: New.
+
 2012-12-23  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* gcc.target/mips/r10k-cache-barrier-10.c: Make a branch-likely
